# wasm4-bad-apple-nn

./: .gitignore  Cargo.toml  build_cart.sh  cart_config.toml  extract_frames.sh  write_frames.js  write_frames_config.toml
bad-apple/: Cargo.toml
bad-apple/src/: lib.rs  model.rs
cart/: Cargo.toml
cart/src/: lib.rs
input-encoding/: Cargo.toml
input-encoding/src/: lib.rs
trainer/: __main__.py  batch_loader.py  make_frames.py  native.py  quantize.py  train.py
trainer-native/: Cargo.toml
trainer-native/src/: input.rs  lib.rs  loader.rs
trainer/trainlib/: batch_loader.py  model.py  native.py  quantize.py
write-frames/: Cargo.toml
write-frames/src/: lib.rs  main.rs
