[package]
name = "trainer-native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
input-encoding = { path = "../input-encoding" }
image = { version = "0.25.1", default-features = false, features = ["png"] }
rand = "0.8.5"
rand_pcg = "0.3.1"
thiserror = "1.0.59"
