[package]
name = "write-frames"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
bad-apple = { path = "../bad-apple" }
image = { version = "0.25.1", default-features = false, features = ["png"] }
